--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made by <a style="color: white;text-decoration: none;" href="www.habibjr.com">habibjr</a> in Germany. ❤️
+    Made by <a style="color: white;" href="www.habibjr.com">habibjr</a> in Germany. ❤️
   </footer>
 
   <script src="./index.js"></script>
